1. removed fade effect, 2.increased slide time interval, 3.align sandy's logo to left

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <div class="wrapper">
 	<!--header-->
 	<header id="header">
-	<div class="carousel fade-carousel slide" data-ride="carousel" data-interval="4000" id="bs-carousel">
+	<div class="carousel fade-carousel slide" data-ride="carousel" data-interval="7000" id="bs-carousel">
   <!-- Overlay -->
-  <div class="overlay"></div>
+  <div class=""></div>
 
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -49,8 +49,9 @@
     <div class="item slides active">
       <div class="slide-1"></div>
       <div class="hero">
+      <img align="left" src="img/logo.png" alt="logo"/>
         <hgroup>
-		 <img src="img/logo.png" alt="logo"/>
+		 
             <h1>Tasty, Hygienic and Quality Food</h1>
             <h3>100% Premium Quality</h3>
         </hgroup>
@@ -60,9 +61,9 @@
     <div class="item slides">
       <div class="slide-2"></div>
       <div class="hero">
-        <hgroup>
-		   <img src="img/logo.png" alt="logo"/>
-            <h1>Tasty, Hygienic and Quality Food</h1>
+      <img align="left" src="img/logo.png" alt="logo"/>
+      <hgroup>
+		    <h1>Tasty, Hygienic and Quality Food</h1>
             <h3>Food Cooked On Traditional Stove (Chulha)</h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Tandoori</a>
@@ -71,9 +72,9 @@
     <div class="item slides">
       <div class="slide-3"></div>
       <div class="hero">
-        <hgroup>
-		 <img src="img/logo.png" alt="logo"/>
-            <h1>Tasty, Hygienic and Quality Food</h1>
+      <img align="left" src="img/logo.png" alt="logo"/>
+      <hgroup>
+		    <h1>Tasty, Hygienic and Quality Food</h1>
             <h3>no compromise with food quality & no preservatives or chemical color </h3>
         </hgroup>
         <a class="btn btn-hero btn-lg" href="#service">Sandy's Curry</a>
