1. Descreses Overlay opacity 2. addded 100% Quality icon on our services page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<header id="header">
 	<div class="carousel fade-carousel slide" data-ride="carousel" data-interval="7000" id="bs-carousel">
   <!-- Overlay -->
-  <div class=""></div>
+  <div class="overlay"></div>
 
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -51,7 +51,6 @@
       <div class="hero">
       <img align="left" src="img/logo.png" alt="logo"/>
         <hgroup>
-		 
             <h1>Tasty, Hygienic and Quality Food</h1>
             <h3>100% Premium Quality</h3>
         </hgroup>
@@ -108,13 +107,14 @@
       <div class="container text-center">
          <div class="heading">
 			<!-- <h2>Sandy's Biryani</h2> -->
+			
 			<img src="img/logo.png" alt="logo"/>
 			<h3>Starting Home delivery services in Warje, Karve Nagar, Pimple Saudagar and Sangvi. Very soon we will be launching Pick N Go stalls.</h3>
 		</div>
 
           <div class="row">
            <div class="col-md-2">
-              
+              <img align="left" alt="" src="img/hundred.png">
             </div>
             <div class="col-md-4">
               <div class="box-area">
