Added few menu items

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			  <li><a href="#header" class="scroll-link">Home</a></li>
 			  <li><a href="#service" class="scroll-link">Our Services</a></li>
 			  <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
-			  <li><a href="#gallery" class="scroll-link">Gallery</a></li>
+			  <li><a href="#gallery" class="scroll-link">Menu</a></li>
 			  <li><a href="#feedback" class="scroll-link">Feedback</a></li>
 			  <li><a href="#contact" class="scroll-link">Contact</a></li>
 			</ul>
@@ -198,13 +198,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit a
 	</div>
 	</section>
 
-	<!--gallery-->
+	<!--Menu-->
 	<section class="gallery page-section" id="gallery">
 		<div class="container">
 		  <div class="heading">
-			<h2>Our Gallery</h2>
-			<h3>Phasellus non dolor nibh. Nullam elementum tellus pretium feugiat.<br>
-			 Cras dictum tellus dui, vitae sollicitudin ipsum tincidunt in. Sed tincidunt tristique enim sed sollcitudin.</h3>
+			<h2>Our Menu</h2>
+			<h3>For authentic taste we cook food on traditional stove in long-established way.</h3>
 		</div>
 
 			<div id="grid-gallery" class="grid-gallery">
@@ -214,32 +213,32 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit a
 							<li class="grid-sizer"></li><!-- for Masonry column width -->
 							<li>
 								<figure>
-									<img src="img/gallery/img1.jpg" alt=""/>
-									<figcaption><h3>Thundercats level</h3> </figcaption>
+									<img src="img/gallery/ChickenBiryani.jpg" alt=""/>
+									<figcaption><h3>Chicken Dum Biryani</h3> </figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img2.jpg" alt=""/>
-									<figcaption><h3>Bushwick selvage</h3></figcaption>
+									<img src="img/gallery/MuttonBiryani.jpg" alt=""/>
+									<figcaption><h3>Mutton Dum Biryani</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img3.jpg" alt=""/>
-									<figcaption><h3>Bottle wayfarers</h3></figcaption>
+									<img src="img/gallery/ChickenTandoori.jpg" alt=""/>
+									<figcaption><h3>Chicken Tandoori</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img4.jpg" alt=""/>
-									<figcaption><h3>Letterpress</h3></figcaption>
+									<img src="img/gallery/ChickenCurry.jpg" alt=""/>
+									<figcaption><h3>Chicken Curry</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img5.jpg" alt=""/>
-									<figcaption><h3>Vice velit chia</h3></figcaption>
+									<img src="img/gallery/ChickenMasala.jpg" alt=""/>
+									<figcaption><h3>Chicken Masala</h3></figcaption>
 								</figure>
 							</li>
 							<li>
@@ -270,32 +269,32 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit a
 						<ul>
 							<li>
 								<figure>
-									<img src="img/gallery/img1.jpg" alt=""/>
-									<figcaption><h3>Thundercats next level</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<img src="img/gallery/ChickenBiryani.jpg" alt=""/>
+									<figcaption><h3>Chicken Dum Biryani</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img2.jpg" alt=""/>
-									<figcaption><h3>Bushwick selvage synth</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<img src="img/gallery/MuttonBiryani.jpg" alt=""/>
+									<figcaption><h3>Mutton Dum Biryani</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img3.jpg" alt=""/>
-									<figcaption><h3>Bottle wayfarers locavore</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<img src="img/gallery/ChickenTandoori.jpg" alt=""/>
+									<figcaption><h3>Chicken Tandoori</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img4.jpg" alt=""/>
-									<figcaption><h3>Letterpress asymmetrical</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<img src="img/gallery/ChickenCurry.jpg" alt=""/>
+									<figcaption><h3>Chicken Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img5.jpg" alt=""/>
-									<figcaption><h3>Vice velit chia</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<img src="img/gallery/ChickenMasala.jpg" alt=""/>
+									<figcaption><h3>Chicken Masala</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
