--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <img src="img/pickngo_stall.png" alt="logo"/>
                   </div>
                   <h3>Pick N Go Stall</h3>
-                  <div class="box-area-text">Very soon we are launching Pick N Go stall too.</div>
+                  <div class="box-area-text">Very soon we are launching Pick N Go stalls in Pune.</div>
               </div>
             </div>
             <!-- <div class="col-md-4">
@@ -180,20 +180,20 @@
 	<section class="aboutus page-section" id="aboutUs">
 	<div class="container">
 	     <div class="heading">
+	     <img align="left" src="img/logo.png" alt="logo"/>
 			<h2>Who we are</h2>
-			<h3>Phasellus non dolor nibh. Nullam elementum tellus pretium feugiat.<br>
-			 Cras dictum tellus dui, vitae sollicitudin ipsum tincidunt in. Sed tincidunt tristique enim sed sollcitudin.</h3>
+			<h3>One of the most and best rated food and Beverage “Sandy’s Biryani” is established in 2013 in Hydrabad, 
+			and it has only growing since then.
+			It is everlasting support of customers towards becoming prestigious Quality food distributor in and around.</h3>
 		</div>
 
 		<div class="content">
-
-			<p>Then I'll write a little about yourself, your brief biography and why I started doing this and still continue.</p><p>
-
-I love to travel and are constantly taking pictures and doing all the sketches, I'm madly in love because our world is so beautiful;)</p><p>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend. Praesent elit tellus, venenatis in lorem ac, porta accumsan sapien. Cras malesuada feugiat magnum.</p><p>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend. Praesent elit tellus, venenatis in lorem ac, porta accumsan sapien. Cras malesuada feugiat magnum.</p>
+			<p>A new chain of Quality food product is now situated in Pune & Pimpri-Chinchwad.  
+			The brand is quickly propelling itself towards being one of the most-preferred for providing food service/ catering in the city of Pune & Pimpri-Chinchwad. </p>
+			<p>The Sandy’s Biryani has highest reputations in the City of Hyderabad, but why settles for just that? The Sandy’s Biryani has grown steadily over the years and now proudly caters to an ever-increasing number of customers in the city. 
+			The website strives to make it easy for customers to find the best option.</p>
+			<p>Sandy’s food is prepared from the Pure Ghee, oil, saffron, and other ingredients without compromise & provides full-service catering, party planning and event management services for corporate entertaining, social events, weddings, receptions and business. 
+			We offer three separate divisions to satisfy our customers’ needs – Corporate, Full Service for Events and Weddings.</p>
 		</div>
 	</div>
 	</section>
@@ -244,21 +244,57 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit a
 							<li>
 								<figure>
 									<img src="img/gallery/img6.jpg" alt=""/>
-									<figcaption><h3>Brunch semiotics</h3></figcaption>
+									<figcaption><h3>Chicken Hara Magic</h3></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
 									<img src="img/gallery/img7.jpg" alt=""/>
-									<figcaption><h3>Brunch semiotics</h3></figcaption>
+									<figcaption><h3>Chicken Methi</h3></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
 									<img src="img/gallery/img8.jpg" alt=""/>
-									<figcaption><h3>Brunch semiotics</h3></figcaption>
+									<figcaption><h3>Chicken Ukad</h3></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Curry</h3></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Masala</h3></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Keema</h3></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Methi</h3></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Ukad</h3></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Egg Curry</h3></figcaption>
 								</figure>
 							</li>
 
@@ -300,23 +336,60 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit a
 							<li>
 								<figure>
 									<img src="img/gallery/img6.jpg" alt=""/>
-									<figcaption><h3>Brunch semiotics</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Hara Magic</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Chicken Methi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Chicken Ukad</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
 									<img src="img/gallery/img7.jpg" alt=""/>
-									<figcaption><h3>Brunch semiotics</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
 									<img src="img/gallery/img8.jpg" alt=""/>
-									<figcaption><h3>Brunch semiotics</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Masala</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Keema</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Methi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Mutton Ukad</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<img src="img/gallery/img8.jpg" alt=""/>
+									<figcaption><h3>Egg Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+								</figure>
+							</li>
+							
 						</ul>
 						<nav>
 							<span class="icon nav-prev"></span>
