Modifed Menu and about us

--- a/index.html
+++ b/index.html
@@ -182,18 +182,20 @@
 	     <div class="heading">
 	     <img align="left" src="img/logo.png" alt="logo"/>
 			<h2>Who we are</h2>
-			<h3>One of the most and best rated food and Beverage “Sandy’s Biryani” is established in 2013 in Hydrabad, 
-			and it has only growing since then.
+			<h3>One of the most and best rated food and Beverage “Sandy’s Biryani” is established in Andhra Pradesh. We are serving in Hyderabad and Adilabad cities.
 			It is everlasting support of customers towards becoming prestigious Quality food distributor in and around.</h3>
 		</div>
 
 		<div class="content">
 			<p>A new chain of Quality food product is now situated in Pune & Pimpri-Chinchwad.  
-			The brand is quickly propelling itself towards being one of the most-preferred for providing food service/ catering in the city of Pune & Pimpri-Chinchwad. </p>
-			<p>The Sandy’s Biryani has highest reputations in the City of Hyderabad, but why settles for just that? The Sandy’s Biryani has grown steadily over the years and now proudly caters to an ever-increasing number of customers in the city. 
+			The brand is quickly propelling itself towards being one of the most-preferred for providing food service/ catering in the city 
+			of Pune & Pimpri-Chinchwad. </p>
+			<p>The Sandy’s Biryani has good reputations in the City of Hyderabad and Adilabad, but why settles for just that? 
+			The Sandy’s Biryani has grown steadily over the years and now proudly caters to an ever-increasing number of customers in the city. 
 			The website strives to make it easy for customers to find the best option.</p>
-			<p>Sandy’s food is prepared from the Pure Ghee, oil, saffron, and other ingredients without compromise & provides full-service catering, party planning and event management services for corporate entertaining, social events, weddings, receptions and business. 
-			We offer three separate divisions to satisfy our customers’ needs – Corporate, Full Service for Events and Weddings.</p>
+			<p>Sandy’s food is prepared from Pure Ghee, oil, saffron, and other ingredients without compromising in quality.</p>
+			<p>We are very passionate about cooking.</p>
+			<p>Our main goal is customer satisfaction and fulfilling our passion in cooking.</p>
 		</div>
 	</div>
 	</section>
@@ -250,7 +252,7 @@
 
 							<li>
 								<figure>
-									<img src="img/gallery/img7.jpg" alt=""/>
+									<img src="img/gallery/ChickenMethi.jpg" alt=""/>
 									<figcaption><h3>Chicken Methi</h3></figcaption>
 								</figure>
 							</li>
@@ -263,37 +265,37 @@
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonCurry.jpg" alt=""/>
 									<figcaption><h3>Mutton Curry</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonMasala.jpg" alt=""/>
 									<figcaption><h3>Mutton Masala</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonKeema.jpg" alt=""/>
 									<figcaption><h3>Mutton Keema</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonMethi.jpg" alt=""/>
 									<figcaption><h3>Mutton Methi</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonUkad.jpg" alt=""/>
 									<figcaption><h3>Mutton Ukad</h3></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/EggCurry.jpg" alt=""/>
 									<figcaption><h3>Egg Curry</h3></figcaption>
 								</figure>
 							</li>
@@ -341,7 +343,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/ChickenMethi.jpg" alt=""/>
 									<figcaption><h3>Chicken Methi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
@@ -354,38 +356,38 @@
 
 							<li>
 								<figure>
-									<img src="img/gallery/img7.jpg" alt=""/>
+									<img src="img/gallery/MuttonCurry.jpg" alt=""/>
 									<figcaption><h3>Mutton Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonMasala.jpg" alt=""/>
 									<figcaption><h3>Mutton Masala</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonKeema.jpg" alt=""/>
 									<figcaption><h3>Mutton Keema</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonMethi.jpg" alt=""/>
 									<figcaption><h3>Mutton Methi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/MuttonUkad.jpg" alt=""/>
 									<figcaption><h3>Mutton Ukad</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/EggCurry.jpg" alt=""/>
 									<figcaption><h3>Egg Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
