--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<!-- <h2>Sandy's Biryani</h2> -->
 			
 			<img src="img/logo.png" alt="logo"/>
-			<h3>Started Home delivery services in <b>Warje</b>, <b>Karve Nagar</b>, <b>Pimple Saudagar</b> and <b>Sangvi</b>.</h3>
+			<h3>Started Home delivery services in <b>Warje</b>, <b>Karve Nagar</b>, <b>Kothrud</b>, <b>Sangvi</b>, <b>Pimple-saudagar</b> & <b>Pimple-gurav</b>.</h3>
 		</div>
 
           <div class="row">
