Modified our services and feedback page

--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
 
           <div class="row">
            <div class="col-md-2">
-              <img align="left" alt="" src="img/hundred.png">
+             <div class="box-area">
+	           <div>
+	           	We assure 100% premium quality.
+	           	<p>*</p>
+	           	We do not compromise with food quality
+	           	<p>*</p>
+	           	Our main goal is customer satisfaction
+	           </div>
+	          </div>
             </div>
             <div class="col-md-4">
               <div class="box-area">
@@ -123,7 +131,7 @@
                     <img src="img/DeliveryBoy.png" alt="logo"/>
                   </div>
                   <h3>Home Delivery</h3>
-                  <div class="box-area-text">After successful establishment in Hyderabad, Now we are serving in Pune.</div>
+                  <div class="box-area-text">After successful establishment in Andhra Pradesh, Now we are serving in Pune.</div>
               </div>
             </div>
             <div class="col-md-4">
@@ -133,8 +141,26 @@
                     <img src="img/pickngo_stall.png" alt="logo"/>
                   </div>
                   <h3>Pick N Go Stall</h3>
-                  <div class="box-area-text">Very soon we are launching Pick N Go stalls in Pune.</div>
+                  <div class="box-area-text">Very soon we are launching Pick N Go stalls in Pune.
+                  <br><br>
+                  </div>
               </div>
+            </div>
+            <div class="col-md-2">
+             <div class="box-area">
+	           <div>
+	           	We use pure Ghee and Keshar.
+	           </div>
+	           <p>*</p>
+	           <div>
+	           	We do not use preservatives or chemical food color.
+	           </div>
+	           <p>*</p>
+	           <div>
+	           	We cook food on traditional stove.
+	           </div>
+	           <br>
+	          </div>
             </div>
             <!-- <div class="col-md-4">
               <div class="box-area">
@@ -412,8 +438,7 @@
 
 			<h2>What Our Client Say</h2>
 
-			<h3>Phasellus non dolor nibh. Nullam elementum tellus pretium feugiat.<br>
-			 Cras dictum tellus dui, vitae sollicitudin ipsum tincidunt in. Sed tincidunt tristique enim sed sollcitudin.</h3>
+			<h3>Feed back from few of our regular client. They contacted us through email, posting their feedbacks here.</h3>
 		</div>
 
   <div class='row'>
@@ -434,7 +459,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="img/client/IMG-20160601-WA0002.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
@@ -448,7 +473,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="img/client/IMG-20160601-WA0001.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
