Modified Contact us page

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonKeema.jpg" alt=""/>
-									<figcaption><h3>Mutton Keema</h3></figcaption>
+									<figcaption><h3>Dum Ka Mutton Keema</h3></figcaption>
 								</figure>
 							</li>
 							<li>
@@ -396,7 +396,7 @@
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonKeema.jpg" alt=""/>
-									<figcaption><h3>Mutton Keema</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Dum Ka Mutton Keema</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
 								</figure>
 							</li>
 							<li>
@@ -438,7 +438,7 @@
 
 			<h2>What Our Client Say</h2>
 
-			<h3>Feed back from few of our regular client. They contacted us through email, posting their feedbacks here.</h3>
+			<h3>Feed back from few of our regular clients. They contacted us through email, posting their feedbacks here.</h3>
 		</div>
 
   <div class='row'>
@@ -512,9 +512,20 @@
 		<div class="heading">
 
 				<h2>Contact Us</h2>
-
-				<h3>Phasellus non dolor nibh. Nullam elementum tellus pretium feugiat.<br>
-				 Cras dictum tellus dui, vitae sollicitudin ipsum tincidunt in. Sed tincidunt tristique enim sed sollcitudin.</h3>
+				<h3>Please call us or email us for your feedback or complaints. Follow us on facebook and twiter.</h3>
+				<table align="center">
+				  <tr>
+				    <td align="center"><img src="img/other_images/phone.png" width="50" height="50" /></td>
+				    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				    <td align="center"><img src="img/other_images/email.png" width="52" height="52" /></td> 
+				  </tr>
+				  <tr>
+				    <td>7040454544 / 7040454549 / 7040664041</td>
+				    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				    <td>sandysbiryani@gmail.com</td> 
+				  </tr>
+				</table>
+				<h3></h3>
 		</div>
 	</div>
 	 <div class="container w960">
