1.Changed email and phone icons 2.Added facebook page

--- a/index.html
+++ b/index.html
@@ -515,9 +515,9 @@
 				<h3>Please call us or email us for your feedback or complaints. Follow us on facebook and twiter.</h3>
 				<table align="center">
 				  <tr>
-				    <td align="center"><img src="img/other_images/phone.png" width="50" height="50" /></td>
+				    <td align="center"><img src="img/other_images/phone2.png" width="50" height="50" /></td>
 				    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				    <td align="center"><img src="img/other_images/email.png" width="52" height="52" /></td> 
+				    <td align="center"><img src="img/other_images/email2.png" width="50" height="50" /></td> 
 				  </tr>
 				  <tr>
 				    <td>7040454544 / 7040454549 / 7040664041</td>
@@ -554,7 +554,7 @@
 	<div class="container">
 		<ul>
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://www.facebook.com/sandysbiryani/?fref=ts"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 			<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 			<li><a href="#"><i class="fa fa-flickr"></i></a></li>
