--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
+									<img src="img/gallery/ChickenUkad.jpg" alt=""/>
 									<figcaption><h3>Chicken Ukad</h3></figcaption>
 								</figure>
 							</li>
@@ -334,87 +334,90 @@
 							<li>
 								<figure>
 									<img src="img/gallery/ChickenBiryani.jpg" alt=""/>
-									<figcaption><h3>Chicken Dum Biryani</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Dum Biryani</h3>
+									<p>Authentic Hyderabadi Dum Biryani. Serving with complementary Mirchi ka Salan.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonBiryani.jpg" alt=""/>
-									<figcaption><h3>Mutton Dum Biryani</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Dum Biryani</h3>
+									<p>Authentic Hyderabadi Dum Biryani. Serving with complementary Mirchi ka Salan.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/ChickenTandoori.jpg" alt=""/>
-									<figcaption><h3>Chicken Tandoori</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Tandoori</h3>
+									<p>Authentic Chicken tandoori. Serving with complementary Tandoor chatni.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/ChickenCurry.jpg" alt=""/>
-									<figcaption><h3>Chicken Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Curry</h3><p></p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/ChickenMasala.jpg" alt=""/>
-									<figcaption><h3>Chicken Masala</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Masala</h3><p></p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/img6.jpg" alt=""/>
-									<figcaption><h3>Chicken Hara Magic</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Hara Magic</h3><p>This is our best seller special chicken dish made up of green chillies.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/ChickenMethi.jpg" alt=""/>
-									<figcaption><h3>Chicken Methi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Chicken Methi</h3><p></p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="img/gallery/img8.jpg" alt=""/>
-									<figcaption><h3>Chicken Ukad</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<img src="img/gallery/ChickenUkad.jpg" alt=""/>
+									<figcaption><h3>Chicken Ukad</h3><p>Chicken soup with good amount of chicken pieces. This is a very good starter.</p></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonCurry.jpg" alt=""/>
-									<figcaption><h3>Mutton Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Curry</h3><p></p></figcaption>
 								</figure>
 							</li>
 
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonMasala.jpg" alt=""/>
-									<figcaption><h3>Mutton Masala</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Masala</h3><p></p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonKeema.jpg" alt=""/>
-									<figcaption><h3>Dum Ka Mutton Keema</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Dum Ka Mutton Keema</h3><p>Authentic Hyderabadi Dum ka Keema.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonMethi.jpg" alt=""/>
-									<figcaption><h3>Mutton Methi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Methi</h3><p></p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/MuttonUkad.jpg" alt=""/>
-									<figcaption><h3>Mutton Ukad</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Mutton Ukad</h3><p>Mutton soup with good amount of mutton pieces. This is a very good starter.</p></figcaption>
 								</figure>
 							</li>
 							<li>
 								<figure>
 									<img src="img/gallery/EggCurry.jpg" alt=""/>
-									<figcaption><h3>Egg Curry</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ornare sem sit amet mauris bibendum, ac fringilla quam eleifend.</p></figcaption>
+									<figcaption><h3>Egg Curry</h3><p></p></figcaption>
 								</figure>
 							</li>
 							
