Modifed client's feedback

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                   <img class="img-circle" src="img/client_photos/photo.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Best chicken tandoori ever had in my life.. Different dishes like methi chicken/mutton, Chiken hara magic are very tasty.. Must try.</p>
+                  <p>Best chicken tandoori ever had in my life.. Other dishes like methi chicken/mutton and Chiken hara magic are very tasty.. Must try.</p>
                   <small>Tanmay</small>
                 </div>
               </div>
